# cuda_cpp_docker_example

./: CMakeLists.txt  README.md  main.cpp
cpp/: CMakeLists.txt
cpp/include/my_lib/: file_header.h
cpp/src/: file_src.cpp
cpp/tests/src/: test_cpp.cpp
docker/: Dockerfile
